--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 y la personalidad en el consumo</a>
             </h2>
           </header>
-          <a href="personalidad.html" class="image fit"><img src="images/modificación.jpg" alt="" /></a>
+          <a href="personalidad.html" class="image fit"><img src="images/perso.jpg" alt="" /></a>
           <p>En esta entrada estudiaremos las personalidades de las marcas y su influencia en el comportamiento de los
             consumidores para responder a la pregunta:
             <strong>¿cómo ciertos rasgos de la personalidad de una marca pueden afectar la motivación del consumidor
@@ -171,20 +171,21 @@
 
         <article>
           <header>
-            <span class="date">Unidad 7</span>
+            <span class="date">Unidad 9</span>
             <h2>
-              <a href="actitudes.html">Análisis de las actitudes,<br />
-                formación y cambio</a>
+              <a href="decisiones.html">El proceso de toma de
+                <br />
+                decisiones de los consumidores</a>
             </h2>
           </header>
-          <a href="actitudes.html" class="image fit"><img src="images/modificación.jpg" alt="" /></a>
-          <p>En esta entrada veremos algunas estrategias utilizadas para modificar el comportamiento de los consumidores
-            para responder la siguiente pregunta:
-            <strong>¿Cuál es el papel de la imagen y publicidad de una marca al tratar de modificar el comportamiento de
-              los consumidores?</strong>
+          <a href="decisiones.html" class="image fit"><img src="images/compra.jpg" alt="" /></a>
+          <p>En esta entrada estudiaremos algunos factores que los mercadólogos y publicista deben tener en cuenta al
+            momento de realizar publicidad de un producto para responder la pregunta:
+
+            <strong>¿Cómo influye la publicidad y los anuncios en la decisión de compra de los consumidores?</strong>
           </p>
           <ul class="actions special">
-            <li><a href="actitudes.html" class="button">Leer</a></li>
+            <li><a href="decisiones.html" class="button">Leer</a></li>
           </ul>
         </article>
       </section>
