--- a/personalidad.html
+++ b/personalidad.html
@@ -60,19 +60,23 @@
 				<p><strong>¿cómo ciertos rasgos de la personalidad de una marca pueden afectar la motivación del
 						consumidor para la decisión de compra?</strong>
 				</p>
-				<p>Hemos estudiado los rasgos de la personalidad de los consumidores relacionados con la receptividad de
-					los productos. Pero también hemos visto, que al igual que las personas, las marcas pueden adoptar
-					una personalidad. La personalidad de una marca está compuesta por un conjunto de características
-					humanas que las hacen únicas, que las definen de una manera coherente bajo unos rasgos específicos y
-					distinguibles.
+				<p>
+					En el capítulo del libro se estudia los rasgos de la personalidad de los consumidores relacionados
+					con la receptividad de los productos. En esta entrada veremos que, al igual que las personas, las
+					marcas pueden adoptar una personalidad. La personalidad de una marca está compuesta por un conjunto
+					de características humanas que las hacen únicas, que las definen de una manera coherente bajo unos
+					rasgos específicos y distinguibles.
+
 				</p>
-				<p>Al adoptar una personalidad, la marca facilita la comunicación y el involucramiento que tendrá el
-					cliente con ella. Cuando el lenguaje se transmite Marca->persona, posiblemente no haya un
+				<p>
+					Al adoptar una personalidad, la marca facilita la comunicación y el involucramiento que tendrá el
+					cliente con ella. Cuando el lenguaje se transmite Marca→Persona, posiblemente no haya un
 					entendimiento claro. Es como si trataras de comunicarte con una manzana. Para lograr esta
 					comunicación, la manzana tendría que tener ciertas cualidades humanas y hablar el mismo lenguaje que
 					tú. Lo mismo sucede con las marcas. Así que lo que hacen es adoptar personalidades humanas para que
 					haya un mejor entendimiento con sus consumidores y estos se sientan motivados a involucrarse con
 					ella.
+
 				</p>
 				<p>Con esto, estamos hablando del poder de una marca para despertar en las personas una respuesta
 					emocional, que nuestros consumidores sientan cercanía si es el caso, o respaldo y tranquilidad si
