--- a/actitudes.html
+++ b/actitudes.html
@@ -29,7 +29,7 @@
 		<nav id="nav">
 			<ul class="links">
 				<li><a href=" index.html"><i class="fas fa-home"></i></a></li>
-				<li><a href="percepcion.html">Percepcion</a></li>
+				<li><a href="percepcion.html">Percepción</a></li>
 				<li><a href="aprendizaje.html">Aprendizaje</a></li>
 				<li><a href="neuro.html">Neuromarketing</a></li>
 				<li class="active"><a href="actitudes.html">Análisis de actitudes</a></li>
@@ -148,7 +148,7 @@
 						<a
 							href="https://doi.org/10.22353/mjbs.2006.04.06">https://doi.org/10.22353/mjbs.2006.04.06</a></i>
 				</p>
-				<p><i>Joseph, L. (2015). Comportamiento del consumidor. (11a. ed.) Pearson Educación. Tomado de
+				<p><i>Joseph, L. (2015). Comportamiento del consumidor. (11a. ed.) Pearson Educación.
 						<a href="http://www.ebooks7-24.com.ezproxy.eafit.edu.co/?il=3468
 						"> http://www.ebooks7-24.com.ezproxy.eafit.edu.co/?il=3468
 						</a></i></p>
