--- a/aprendizaje.html
+++ b/aprendizaje.html
@@ -33,7 +33,7 @@
 		<nav id="nav">
 			<ul class="links">
 				<li><a href=" index.html"><i class="fas fa-home"></i></a></li>
-				<li><a href="percepcion.html">Percepcion</a></li>
+				<li><a href="percepcion.html">Percepción</a></li>
 				<li class="active"><a href="aprendizaje.html">Aprendizaje</a></li>
 				<li><a href="neuro.html">Neuromarketing</a></li>
 				<li><a href="actitudes.html">Análisis de actitudes</a></li>
@@ -51,7 +51,7 @@
 					<span class="date">Unidad 5</span>
 					<h1>Aprendizaje del consumidor
 					</h1>
-					<p><i>El aprendizaje en el consumo</i>
+					<p><i>Involucramiento del consumidor</i>
 						<hr>
 				</header>
 				<p>En esta entrada del blog, partiendo del tema del aprendizaje, estudiaremos el involucramiento,
@@ -115,7 +115,7 @@
 					para generar familiaridad con la marca e inducir el comportamiento de compra.
 				</p>
 				<hr>
-				<h3>Reflexiones personales</h3>
+				<h3>Reflexiones Finales</h3>
 				<p>La idea de aprendizaje del consumidor se fundamenta en que los consumidores deciden respecto de las
 					compras, investigan y evalúan la información respecto a estas, forman actitudes hacia las
 					alternativas disponibles y, luego, toman sus decisiones de compra. De allí parte el grado de
@@ -145,7 +145,7 @@
 				</div>
 				<hr>
 				<h3>Referencias</h3>
-				<p><i>Joseph, L. (2015). Comportamiento del consumidor. (11a. ed.) Pearson Educación. Tomado de: <a
+				<p><i>Joseph, L. (2015). Comportamiento del consumidor. (11a. ed.) Pearson Educación. <a
 							href="https://bit.ly/2FuXUqO"> https://bit.ly/2FuXUqO</a></i></p>
 				<p><i>Involucramiento de los consumidores. (2014). Slideshare.
 						<a href="https://cutt.ly/3gaTP7Z">https://cutt.ly/3gaTP7Z</a></i></p>
