--- a/decisiones.html
+++ b/decisiones.html
@@ -33,7 +33,7 @@
 		<nav id="nav">
 			<ul class="links">
 				<li><a href=" index.html"><i class="fas fa-home"></i></a></li>
-				<li><a href="percepcion.html">Percepcion</a></li>
+				<li><a href="percepcion.html">Percepción</a></li>
 				<li><a href="aprendizaje.html">Aprendizaje</a></li>
 				<li><a href="neuro.html">Neuromarketing</a></li>
 				<li><a href="actitudes.html">Análisis de actitudes</a></li>
@@ -52,7 +52,7 @@
 					<h1>El proceso de toma de decisiones de los consumidores
 
 					</h1>
-					<p><i>Procesos cerebrales en el marketing</i>
+					<p><i>Publicidad y estrategias de marketing</i>
 						<hr>
 				</header>
 				<p>En esta entrada estudiaremos algunos factores que los mercadólogos y publicista deben tener en cuenta
@@ -100,7 +100,8 @@
 				</p>
 				<p><img src="images/helao.gif" style="float: right; margin:1em; width: 20vw; height: 15vw;">Por ejemplo,
 					si se fuera a publicitar una nueva mantequilla en el mercado, se debe tener en cuenta
-					que uso le dan a este producto tradicionalmente. Si en el lugar acostumbran utilizar la mantequilla
+					que uso le dan a este producto tradicionalmente. Si en el lugar acostumbran a utilizar la
+					mantequilla
 					para esparcirla en la arepa al desayuno, como es el caso de Colombia, el anuncio publicitario no
 					tendría sentido si mostrara este producto siendo esparcido en una tortilla. El potencial cliente
 					posiblemente no sea persuadido por ese anuncio y no decida comprarla porque en su cultura se tiene
@@ -108,7 +109,7 @@
 					nuevo producto.
 				</p>
 				<h3>Clases sociales</h3>
-				<p>los anunciantes se dirigen a consumidores de diferentes clases sociales, y ofrecen
+				<p>Los anunciantes se dirigen a consumidores de diferentes clases sociales, y ofrecen
 					específicamente productos que se adaptan a su rango de precios. Una persona de clase baja se inclina
 					más por el precio del producto mientras que la persona de clase alta se siente más atraída por
 					elementos como la calidad, la innovación, las características o incluso el “beneficio social” que
@@ -126,11 +127,11 @@
 				</p>
 				<p><img src="images/spinner.gif" style="float: right; margin:1em; width: 12vw; height: 9vw;">Por
 					ejemplo, hace unos años estuvo muy de moda un pequeño juguete llamado Spinners. Su funcionalidad
-					no era mucha, sin embargo se hizo muy famoso entre los jóvenes y se convirtió en tendencia entre
+					no era mucha, sin embargo, se hizo muy famoso entre los jóvenes y se convirtió en tendencia entre
 					ellos lo que motivaba a quienes aún no lo tuvieran a decidir comprarlo.
 				</p>
 				<hr>
-				<h3>Reflexiones Personales</h3>
+				<h3>Reflexiones Finales</h3>
 				<p>Los consumidores se ven muy influenciados en sus decisiones de compra por las estrategias de
 					publicidad que utilizan los productos y servicios. Sin embargo, es tarea de los publicistas y los
 					mercadólogos lograr esa influencia y persuasión sobre los potenciales clientes.
@@ -158,8 +159,7 @@
 				<p><i>Redacción, E. (2014). Publicidad, ¿Cómo influye en el consumidor? Territorio Marketing.<a
 							href="https://cutt.ly/wgOOKe6"> https://cutt.ly/wgOOKe6</a></i></p>
 				<p><i>Joseph, L. (2015). Comportamiento del consumidor. (11a. ed.) Pearson Educación.
-						<a
-							href="http://www.ebooks7-24.com.ezproxy.eafit.edu.co/?il=3468">http://www.ebooks7-24.com.ezproxy.eafit.edu.co/?il=3468</a></i>
+						<a href="https://bit.ly/3dn2Fz1">https://bit.ly/3dn2Fz1</a></i>
 				</p>
 				<p><i>Marcom, B. (2017). How Advertising Impacts Consumer Purchase Decision Making. Medium.
 						<a href="https://cutt.ly/qgOOKVk">https://cutt.ly/qgOOKVk</a></i></p>
