--- a/neuro.html
+++ b/neuro.html
@@ -33,7 +33,7 @@
 		<nav id="nav">
 			<ul class="links">
 				<li><a href=" index.html"><i class="fas fa-home"></i></a></li>
-				<li><a href="percepcion.html">Percepcion</a></li>
+				<li><a href="percepcion.html">Percepción</a></li>
 				<li><a href="aprendizaje.html">Aprendizaje</a></li>
 				<li class="active"><a href="neuro.html">Neuromarketing</a></li>
 				<li><a href="actitudes.html">Análisis de actitudes</a></li>
