--- a/personalidad.html
+++ b/personalidad.html
@@ -33,7 +33,7 @@
 		<nav id="nav">
 			<ul class="links">
 				<li><a href=" index.html"><i class="fas fa-home"></i></a></li>
-				<li><a href="percepcion.html">Percepcion</a></li>
+				<li><a href="percepcion.html">Percepción</a></li>
 				<li><a href="aprendizaje.html">Aprendizaje</a></li>
 				<li><a href="neuro.html">Neuromarketing</a></li>
 				<li><a href="actitudes.html">Análisis de actitudes</a></li>
@@ -52,12 +52,12 @@
 					<h1>Teoría de la motivación y la personalidad en el consumo
 
 					</h1>
-					<p><i>Procesos cerebrales en el marketing</i>
+					<p><i>Personalidad y autoimagen</i>
 						<hr>
 				</header>
 				<p>En esta entrada estudiaremos las personalidades de las marcas y su influencia en el comportamiento de
 					los consumidores para responder a la pregunta</p>
-				<p><strong>¿cómo ciertos rasgos de la personalidad de una marca pueden afectar la motivación del
+				<p><strong>¿Cómo ciertos rasgos de la personalidad de una marca pueden afectar la motivación del
 						consumidor para la decisión de compra?</strong>
 				</p>
 				<p>
@@ -72,7 +72,7 @@
 					Al adoptar una personalidad, la marca facilita la comunicación y el involucramiento que tendrá el
 					cliente con ella. Cuando el lenguaje se transmite Marca→Persona, posiblemente no haya un
 					entendimiento claro. Es como si trataras de comunicarte con una manzana. Para lograr esta
-					comunicación, la manzana tendría que tener ciertas cualidades humanas y hablar el mismo lenguaje que
+					comunicación, la manzana debería tener ciertas cualidades humanas y hablar el mismo lenguaje que
 					tú. Lo mismo sucede con las marcas. Así que lo que hacen es adoptar personalidades humanas para que
 					haya un mejor entendimiento con sus consumidores y estos se sientan motivados a involucrarse con
 					ella.
@@ -85,7 +85,8 @@
 				<p><img src="images/gato.gif" style="float: right; margin:1em; width: 13vw; height: 16vw;">Las personas
 					tienden a comprar más seguido una marca si detectan rasgos de su personalidad. Las
 					percepciones del yo suelen tener relación con la compra de productos y servicios pues los
-					consumidores acostumbran seleccionar productos que de acuerdo con la imagen que tienen de sí mismos
+					consumidores acostumbran a seleccionar productos que de acuerdo con la imagen que tienen de sí
+					mismos
 					y que la mejoran. Muchos productos y marcas tienen un valor simbólico para los individuos, ya que
 					sus imágenes son congruentes con la forma en la que se perciben a sí mismos (autoimagen).
 				</p>
@@ -125,7 +126,8 @@
 				</p>
 				<p>Ahora, ¿Qué tipo de persona crees que estaría motivada a comprar esta marca?
 					¿Cómo sería su autoimagen? Posiblemente los compradores de Nike no son personas tímidas que
-					prefieren quedarse en sus casa en lugar de salir a experimentar nuevos retos en sus vidas. Más bien,
+					prefieren quedarse en sus casas en lugar de salir a experimentar nuevos retos en sus vidas. Más
+					bien,
 					los compradores de Nike son personas que les gustaría que los demás los vieran como arriesgados
 					(autoimagen social) o que les gustaría verse así mismos con un espíritu juvenil (autoimagen ideal).
 				</p>
@@ -155,7 +157,7 @@
 				</div>
 				<br>
 				<hr>
-				<h3>Reflexiones personales</h3>
+				<h3>Reflexiones Finales</h3>
 				<p>Las marcas adoptan cualidades humanas para lograr un mayor involucramiento del consumidor y una
 					cercanía que genere fidelidad.
 				</p>
@@ -173,7 +175,8 @@
 				<p><i>Dvornechuck, A. (2019). Brand Personality: Traits of Top Brands - Arek Dvornechuck. Medium.<a
 							href="https://cutt.ly/4gOY7VH"> https://cutt.ly/4gOY7VH</a></i></p>
 				<p><i>Parra, C. (2019). Personalidad de marca: formas de ser de una marca que enamoran. Rock Content.
-						<a href="https://cutt.ly/VgOY504">https://cutt.ly/VgOY504</a></i></p>
+						<a href="https://cutt.ly/VgOY504" style="margin-left: 2em;"> https://cutt.ly/VgOY504</a></i>
+				</p>
 				<p><i>Camacho, Y. (2017). 3 ejemplos de personalidad de marca que enamoraron al consumidor. Hache.
 						<a href="https://cutt.ly/NgOY6FJ"> https://cutt.ly/NgOY6FJ</a></i></p>
 			</section>
