--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <nav id="nav">
       <ul class="links">
         <li class="active"><a href=" index.html"><i class="fas fa-home"></i></a></li>
-        <li><a href="percepcion.html">Percepcion</a></li>
+        <li><a href="percepcion.html">Percepción</a></li>
         <li><a href="aprendizaje.html">Aprendizaje</a></li>
         <li><a href="neuro.html">Neuromarketing</a></li>
         <li><a href="actitudes.html">Análisis de actitudes</a></li>
@@ -77,7 +77,7 @@
 
           </p>
           <ul class="actions special">
-            <li><a href="percepcion.html" class="button">Leer</a></li>
+            <li><a href="Percepción.html" class="button">Leer</a></li>
           </ul>
         </article>
 
