--- a/percepcion.html
+++ b/percepcion.html
@@ -33,7 +33,7 @@
 		<nav id="nav">
 			<ul class="links">
 				<li><a href=" index.html"><i class="fas fa-home"></i></a></li>
-				<li class="active"><a href="percepcion.html">Percepcion</a></li>
+				<li class="active"><a href="percepcion.html">Percepción</a></li>
 				<li><a href="aprendizaje.html">Aprendizaje</a></li>
 				<li><a href="neuro.html">Neuromarketing</a></li>
 				<li><a href="actitudes.html">Análisis de actitudes</a></li>
@@ -138,7 +138,7 @@
 					poca calidad.
 				</p>
 				<hr>
-				<h3>Reflexiones personales</h3>
+				<h3>Reflexiones Finales</h3>
 				<p></p>
 				<p>Después de analizar algunas de las herramientas más utilizadas para fijar los precios de los
 					productos y darle justificación a la pregunta inicial de si todas estas estrategias eran efectivas
@@ -163,11 +163,11 @@
 				</div>
 				<hr>
 				<h3>Referencias</h3>
-				<p><i>Javier Ortego. (2016). El precio y su percepción psicológica en el consumidor. Tomado de <a
+				<p><i>Javier Ortego. (2016). El precio y su percepción psicológica en el consumidor. <a
 							href="https://bit.ly/3iP39iG"> https://bit.ly/3iP39iG</a></i></p>
-				<p><i>Emprende Aprendiendo. (2018). ¿Cómo Escogen el Precio de los Productos? [Vídeo]. Tomado de
-						<a href="https://bit.ly/2GQUlvt">https://bit.ly/2GQUlvt</a></i></p>
-				<p><i>Joseph, L. (2015). Comportamiento del consumidor. (11a. ed.) Pearson Educación. Tomado de <a
+				<p><i>Emprende Aprendiendo. (2018). ¿Cómo Escogen el Precio de los Productos? [Vídeo]. <a
+							href="https://bit.ly/2GQUlvt">https://bit.ly/2GQUlvt</a></i></p>
+				<p><i>Joseph, L. (2015). Comportamiento del consumidor. (11a. ed.) Pearson Educación. <a
 							href="https://bit.ly/3dn2Fz1"> https://bit.ly/3dn2Fz1</a></i></p>
 
 			</section>
