--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           <a href="personalidad.html" class="image fit"><img src="images/perso.jpg" alt="" /></a>
           <p>En esta entrada estudiaremos las personalidades de las marcas y su influencia en el comportamiento de los
             consumidores para responder a la pregunta:
-            <strong>¿cómo ciertos rasgos de la personalidad de una marca pueden afectar la motivación del consumidor
+            <strong>¿Cómo ciertos rasgos de la personalidad de una marca pueden afectar la motivación del consumidor
               para la decisión de compra?</strong>
           </p>
           <ul class="actions special">
