--- a/actitudes.html
+++ b/actitudes.html
@@ -34,7 +34,7 @@
 				<li><a href="neuro.html">Neuromarketing</a></li>
 				<li class="active"><a href="actitudes.html">Análisis de actitudes</a></li>
 				<li><a href="personalidad.html">Personalidad</a></li>
-				<li><a href="decisiones.html">Decisiones</a></li>
+				<li><a href="decisiones.html">Toma de decisiones</a></li>
 			</ul>
 		</nav>
 
