--- a/aprendizaje.html
+++ b/aprendizaje.html
@@ -38,7 +38,7 @@
 				<li><a href="neuro.html">Neuromarketing</a></li>
 				<li><a href="actitudes.html">Análisis de actitudes</a></li>
 				<li><a href="personalidad.html">Personalidad</a></li>
-				<li><a href="decisiones.html">Decisiones</a></li>
+				<li><a href="decisiones.html">Toma de decisiones</a></li>
 			</ul>
 		</nav>
 
@@ -118,7 +118,7 @@
 				<h3>Reflexiones Finales</h3>
 				<p>La idea de aprendizaje del consumidor se fundamenta en que los consumidores deciden respecto de las
 					compras, investigan y evalúan la información respecto a estas, forman actitudes hacia las
-					alternativas disponibles y, luego, toman sus decisiones de compra. De allí parte el grado de
+					alternativas disponibles y, luego, toman sus Toma de decisiones de compra. De allí parte el grado de
 					involucramiento que tienen los consumidores con los productos, teniendo en cuenta tales factores
 					cognitivos, como la importancia que tiene la compra para el consumidor, o factores conductuales,
 					como la búsqueda y la evaluación de información sobre productos.
