--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <li><a href="neuro.html">Neuromarketing</a></li>
         <li><a href="actitudes.html">Análisis de actitudes</a></li>
         <li><a href="personalidad.html">Personalidad</a></li>
-        <li><a href="decisiones.html">Decisiones</a></li>
+        <li><a href="decisiones.html">Toma de decisiones</a></li>
       </ul>
 
     </nav>
