--- a/personalidad.html
+++ b/personalidad.html
@@ -38,7 +38,7 @@
 				<li><a href="neuro.html">Neuromarketing</a></li>
 				<li><a href="actitudes.html">Análisis de actitudes</a></li>
 				<li class="active"><a href="personalidad.html">Personalidad</a></li>
-				<li><a href="decisiones.html">Decisiones</a></li>
+				<li><a href="decisiones.html">Toma de decisiones</a></li>
 			</ul>
 		</nav>
 
